expection and error are output now showing in the Frontend